# WebServer

./: CMakeLists.txt  WebServer.cpp
include/Uri/: Uri.hpp
src/: CMakeLists.txt  Uri.cpp
test/: CMakeLists.txt  UriTest.cpp
test/src/: UriTest.cpp
